# core-media-composer

./: Dockerfile  pyproject.toml
docs/prompts/: CORE_MEDIA_COMPOSER.md
src/core_media_composer/: __init__.py  composer.py  config.py  main.py  schemas.py
tests/unit/: test_composer.py
