[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-media-composer"
version = "0.1.0"
description = "Media Composer per Venture Studio Automated"
requires-python = ">=3.12"
dependencies = [
    "pydantic"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
